--- a/Android/TP1/app/src/main/AndroidManifest.xml
+++ b/Android/TP1/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.notkamui.android.tp1">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TP1">
         <activity
-            android:name=".HelloWorldActivity"
+            android:name=".activities.FortuneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.HelloWorldActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
