--- a/Android/TP1/build.gradle
+++ b/Android/TP1/build.gradle
@@ -8,3 +8,7 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+allprojects {
+    buildDir = "/tmp/${rootProject.name}/${project.name}"
+}
