--- a/NoSQL/nosql-2/nosql-2-docker/docker-compose.yml
+++ b/NoSQL/nosql-2/nosql-2-docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
 
   mongo:
     image: mongo:5.0.14
-    restart: always
+    restart: unless-stopped
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
